# GitScribe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  gitscribe.json
src/: change.rs  changelog.rs  config.rs  lib.rs  main.rs  util.rs  version.rs  version_file_sync.rs
templates/: changelog.md.j2  quasarChangelog.vue.j2
test_project_dir/: CHANGELOG.md  gitscribe.json
test_project_dir/test_js_dir/: package.json
test_project_dir/test_python_dir/: pyproject.toml
test_project_dir/test_yml_dir/: galaxy.yml
