[dependencies]
askama = "0.12.1"
chrono = "0.4.33"
colored = "2.1.0"
indexmap = "2.2.3"
inquire = "0.6.2"
regex = "1.10.3"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
toml = "0.8.10"

[dependencies.clap]
features = ["derive"]
version = "4.5.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.196"

[package]
authors = ["Kade Powell <kadepowell@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "A simple command line tool to generate a change log from a git repository and control the versioning of a project."
edition = "2021"
homepage = "https://github.com/Kade-Powell/gitscribe"
keywords = ["cli", "changelog", "semver", "versioning", "automation"]
license = "MIT OR Apache-2.0"
name = "gitscribe"
readme = "README.md"
repository = "https://github.com/Kade-Powell/gitscribe"
version = "0.3.0"
